--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -53,6 +53,10 @@
   &:not(last-child) {
     margin-bottom: 32px;
   }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .open-menu-btn {
@@ -64,6 +68,10 @@
   position: absolute;
   top: 10px;
   right: 15px;
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
   @media screen and (min-width: 768px) {
     display: none;
   }
@@ -78,6 +86,10 @@
   position: absolute;
   top: 10px;
   right: 15px;
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .mob-menu-list__link {
