--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -23,43 +23,32 @@
   // display: flex;
   display: block;
   text-align: center;
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
-    align-content: flex-start;
     flex-wrap: wrap;
-  }
-  @media screen and (min-width: 1200px) {
-    justify-content: space-between;
-    align-content: space-between;
+    margin-right: -30px;
   }
 }
 
 .members__item {
+  // max-width: 270px;
   margin-bottom: 30px;
   padding-bottom: 16px;
-  // max-width: 270px;
   background-color: var(--primary-background-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   @media screen and (min-width: 768px) {
-    width: 45%;
-    flex-basis: 0.45;
-    margin: 0px 0px 30px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
-    width: 270px;
-    margin: 0px;
-    margin-bottom: 0px;
-    flex-wrap: nowrap;
-    flex-basis: 0.25;
-    &:nth-child(-n + 3) {
-      margin-right: 30px;
-    }
+    width: calc(100% / 4 - 30px);
   }
 }
+
 .members__box {
   padding-top: 30px;
   padding-bottom: 16px;
