--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,9 @@ h3 {
 
 .container {
   width: 100%;
-  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
@@ -393,7 +393,6 @@ h3 {
 
 .page-header__container {
   display: flex;
-  width: 100%;
   height: 80px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -786,44 +785,31 @@ h3 {
 
 .features-list {
   display: block;
+  margin-bottom: -30px;
 }
 
 @media screen and (min-width: 768px) {
   .features-list {
     display: flex;
-    justify-content: space-around;
-    align-content: flex-start;
     flex-wrap: wrap;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features-list {
-    justify-content: space-between;
-    align-content: space-between;
+    margin-right: -30px;
   }
 }
 
 .features-list__items {
-  width: auto;
   margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .features-list__items {
-    width: 45%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features-list__items {
-    width: 270px;
-    margin: 0px;
-    margin-bottom: 0px;
-    flex-wrap: nowrap;
-    flex-basis: 0.25;
+    width: calc(100% / 4 - 30px);
   }
 }
 
@@ -845,12 +831,24 @@ h3 {
 }
 
 .features-list__title {
+  display: flex;
+  justify-content: center;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .features-list__title {
+    display: block;
+  }
+}
+
+.features-list__text {
+  letter-spacing: 0.03em;
 }
 
 .activity {
@@ -921,7 +919,6 @@ h3 {
 }
 
 .members__list {
-  display: block;
   text-align: center;
   margin-bottom: -30px;
 }
@@ -982,85 +979,51 @@ h3 {
   .clients {
     padding-top: 94px;
     padding-bottom: 94px;
-    justify-content: space-between;
   }
 }
 
 .clients__title {
   margin-bottom: 30px;
+  line-height: 1.17;
 }
 
 @media screen and (min-width: 1200px) {
   .clients__title {
     font-size: 36px;
-    line-height: 1.17;
     margin-bottom: 50px;
   }
 }
 
 .clients__list {
-  display: block;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -30px;
+  margin-right: -30px;
 }
 
-@media screen and (min-width: 480px) {
-  .clients__list {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    flex-wrap: wrap;
+.clients__item {
+  margin-bottom: 30px;
+  margin-right: 30px;
+  width: calc(100% / 2 - 30px);
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: calc(100% / 3 - 30px);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .clients__list {
-    flex-wrap: nowrap;
+  .clients__item {
+    width: calc(100% / 6 - 30px);
   }
-}
-
-.clients__item {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.clients__item:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .clients__item:hover .clients__svg, .clients__item:focus .clients__svg {
   fill: var(--accent-color);
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .clients__item {
-    width: 45%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .clients__item {
-    width: 30%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .clients__item {
-    width: 170px;
-    margin-bottom: 30px;
-  }
-  .clients__item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
 .clients__icon {
-  width: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
   display: flex;
