--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,31 +4,22 @@
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
-    justify-content: space-between;
   }
 }
 .clients__title {
   margin-bottom: 30px;
+  line-height: 1.17;
   @media screen and (min-width: 1200px) {
     font-size: 36px;
-    line-height: 1.17;
     margin-bottom: 50px;
   }
 }
 
 .clients__list {
-  // display: flex;
-  display: block;
-  text-align: center;
-  @media screen and (min-width: 480px) {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    flex-wrap: wrap;
-  }
-  @media screen and (min-width: 1200px) {
-    flex-wrap: nowrap;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -30px;
+  margin-right: -30px;
 }
 
 .clients__item {
@@ -36,40 +27,26 @@
   // &:not(:last-child) {
   //   margin-right: 30px;
   // }
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &:not(:last-child) {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  width: calc(100% / 2 - 30px);
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 3 - 30px);
   }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% / 6 - 30px);
+  }
+
   &:hover,
   &:focus {
     .clients__svg {
       fill: var(--accent-color);
     }
   }
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    width: 45%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
-  }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: 30%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 170px;
-    margin-bottom: 30px;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
 }
 
 .clients__icon {
-  width: 100%;
+  // width: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
   display: flex;
