--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -11,32 +11,22 @@
 .features-list {
   // display: flex;
   display: block;
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-around;
-    align-content: flex-start;
     flex-wrap: wrap;
-  }
-  @media screen and (min-width: 1200px) {
-    justify-content: space-between;
-    align-content: space-between;
+    margin-right: -30px;
   }
 }
 
 .features-list__items {
-  width: auto;
   margin-bottom: 30px;
   @media screen and (min-width: 768px) {
-    width: 45%;
-    flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
-    width: 270px;
-    margin: 0px;
-    margin-bottom: 0px;
-    flex-wrap: nowrap;
-    flex-basis: 0.25;
+    width: calc(100% / 4 - 30px);
   }
 }
 
@@ -56,14 +46,18 @@
 }
 
 .features-list__title {
+  display: flex;
+  justify-content: center;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
 }
-// .features-list__text {
-//   letter-spacing: 0.03em;
-//   width: 270px;
-// }
+.features-list__text {
+  letter-spacing: 0.03em;
+}
