--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -21,7 +21,7 @@
 
 .members__list {
   // display: flex;
-  display: block;
+  // display: block;
   text-align: center;
   margin-bottom: -30px;
   @media screen and (min-width: 768px) {
