--- a/css/main.css
+++ b/css/main.css
@@ -856,6 +856,7 @@ h3 {
 }
 
 .activity__title {
+  font-size: 36px;
   margin-bottom: 50px;
 }
 
@@ -1082,6 +1083,12 @@ h3 {
   margin-bottom: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .categories__item {
+    margin-bottom: 0px;
+  }
+}
+
 .categories__button {
   height: 38px;
   padding: 6px 22px;
@@ -1109,11 +1116,11 @@ h3 {
   .work-list {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -30px;
   }
 }
 
 .work-list__item {
-  width: 100%;
   margin-bottom: 30px;
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -1126,18 +1133,14 @@ h3 {
 
 @media screen and (min-width: 768px) {
   .work-list__item {
-    width: 45%;
-    margin: 0px 15px 30px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .work-list__item {
-    width: 370px;
-    margin: 0px 30px 30px 0px;
-  }
-  .work-list__item:nth-child(3n + 3) {
-    margin-right: 0px;
+    width: calc(100% / 3 - 30px);
   }
 }
 
