--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -27,6 +27,9 @@
 .categories__item {
   margin-left: 8px;
   margin-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
 }
 .categories__button {
   height: 38px;
@@ -56,13 +59,11 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-  }
-  @media screen and (min-width: 1200px) {
+    margin-right: -30px;
   }
 }
 
 .work-list__item {
-  width: 100%;
   // margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
@@ -73,22 +74,12 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  // &:nth-child(3n) {
-  //   margin-right: 0px;
-  // }
-  // &:nth-last-child(-n + 3) {
-  //   margin-bottom: 0px;
-  // }
   @media screen and (min-width: 768px) {
-    width: 45%;
-    margin: 0px 15px 30px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
-    width: 370px;
-    margin: 0px 30px 30px 0px;
-    &:nth-child(3n + 3) {
-      margin-right: 0px;
-    }
+    width: calc(100% / 3 - 30px);
   }
 }
 
