--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,7 @@ h3 {
 
 .page-header__container {
   display: flex;
-  height: 80px;
+  height: 60px;
   padding-top: 15px;
   padding-bottom: 15px;
   position: relative;
@@ -409,6 +409,7 @@ h3 {
 
 @media screen and (min-width: 1200px) {
   .page-header__container {
+    height: 80px;
     max-width: 1200px;
     justify-content: space-between;
   }
@@ -792,7 +793,7 @@ h3 {
   .features-list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -803,7 +804,7 @@ h3 {
 @media screen and (min-width: 768px) {
   .features-list__items {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
@@ -928,7 +929,7 @@ h3 {
   .members__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -943,7 +944,7 @@ h3 {
 @media screen and (min-width: 768px) {
   .members__item {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
@@ -999,12 +1000,12 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: -30px;
-  margin-right: -30px;
+  margin-left: -30px;
 }
 
 .clients__item {
   margin-bottom: 30px;
-  margin-right: 30px;
+  margin-left: 30px;
   width: calc(100% / 2 - 30px);
 }
 
@@ -1116,7 +1117,7 @@ h3 {
   .work-list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -1134,7 +1135,7 @@ h3 {
 @media screen and (min-width: 768px) {
   .work-list__item {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
