--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -19,16 +19,12 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: -30px;
-  margin-right: -30px;
+  margin-left: -30px;
 }
 
 .clients__item {
-  // max-width: 170px;
-  // &:not(:last-child) {
-  //   margin-right: 30px;
-  // }
   margin-bottom: 30px;
-  margin-right: 30px;
+  margin-left: 30px;
   width: calc(100% / 2 - 30px);
   @media screen and (min-width: 768px) {
     width: calc(100% / 3 - 30px);
