--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -15,7 +15,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -23,7 +23,7 @@
   margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
   @media screen and (min-width: 1200px) {
     width: calc(100% / 4 - 30px);
