--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -27,7 +27,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -42,7 +42,7 @@
 
   @media screen and (min-width: 768px) {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
   @media screen and (min-width: 1200px) {
     width: calc(100% / 4 - 30px);
