--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -59,7 +59,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -76,7 +76,7 @@
   }
   @media screen and (min-width: 768px) {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
   }
   @media screen and (min-width: 1200px) {
     width: calc(100% / 3 - 30px);
